<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_email">Email</string>
    <string name="enter_email_address">Enter the email address</string>
    <string name="textview">Password</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="welcome_on_board">Welcome on board</string>
    <string name="description">Description</string>
    <string name="hint_shoe_name">Shoe name</string>
    <string name="hint_company_name">Shoe company</string>
    <string name="hint_shoe_size">Shoe size</string>
    <string name="hint_shoe_desc">Shoe description</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="ShoeDetails">Shoe Details</string>
    <string name="image">image</string>
    <string name="show_list">Show List</string>
    <string name="you_should_follows_this_steps_to_take_the_most_from_the_app">You should follows this steps to take the most from the app</string>
    <string name="instructions">Instructions</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="shoe_company">Shoe Company</string>
</resources>
